@@ -1,4 +1,6 @@
 {{
+    # vim: set ts=8 sts=4 sw=4 tw=115 et noeol :
+
     $authors = join("\n", map { "author              = $_" } @{$dist->authors});
     $copyright_year = (localtime)[5] + 1900;
     '';
