@@ -55,8 +55,9 @@ x_IRC/m,
 );
 
 unlike($dist_ini, qr/^\s/, 'no leading whitespace in dist.ini');
-unlike($dist_ini, qr/[^\S\n]\n/m, 'no trailing whitespace in dist.ini');
+unlike($dist_ini, qr/[^\S\n]\n/, 'no trailing whitespace in dist.ini');
 unlike($dist_ini, qr/\n\n\n/, 'no double blank links in dist.ini');
+unlike($dist_ini, qr/\n\n\z/, 'file does not end with a blank line');
 
 my $module = path($mint_dir, 'lib/Dist/Zilla/Plugin/Foo/Bar.pm')->slurp_utf8;
 
