@@ -6,6 +6,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
             header to another hacky mechanism, but at least this one is more
             likely to do what I want
           - use :PerlExecFiles in [Test::Compile]
+          - dist.ini in newly-minted dists will now never have trailing
+            whitespace
 
 0.101     2015-08-08 20:18:26Z
           - add use of the Verbatim transformer to the weaver plugin bundle
